# Hands-On-Large-Language-Models-CN

./: .gitignore  README.md  dependencies.sh  pyproject.toml
chapter01/: Chapter 1 - Introduction to Language Models.ipynb
chapter02/: Chapter 2 - Tokens and Embeddings.ipynb
chapter03/: Chapter 3 - Looking Inside Transformer LLMs.ipynb
chapter04/: Chapter 4 - Text Classification.ipynb
chapter06/: Chapter 6 - Prompt Engineering.ipynb
chapter07/: Chapter 7 - Advanced Text Generation Techniques and Tools.ipynb  Chapter 7 - langchain-and-langgraph-basic.ipynb
chapter08/agentic-rag/: rl-based.py  tool-based.py
chapter08/native-rag/: knowledge_base.txt  step1-offline-process.py  step2-online-rag.py
chapter12/: Chapter 12 - Fine-tuning Generation Models.ipynb
